--- a/Video 86/package.json
+++ b/Video 86/package.json
@@ -1,8 +1,7 @@
 {
   "name": "video-86",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js", 
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,8 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2"
-  }
+  },
+  "description": ""
 }
