--- a/Video 87/package.json
+++ b/Video 87/package.json
@@ -1,13 +1,13 @@
 {
   "name": "video-87",
   "version": "1.0.0",
-  "description": "",
   "main": "main.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
